# file-uploader

./: .gitignore  CMakeLists.txt  file-uploader.qrc  main.cpp  mainwindow.cpp  mainwindow.hpp  mainwindow.ui  parametersdlg.cpp  parametersdlg.hpp  parametersdlg.ui  settings.cpp  settings.hpp  uploadimagesdlg.cpp  uploadimagesdlg.hpp  uploadimagesdlg.ui  urlsmodel.cpp  urlsmodel.hpp
cmake/: qxlsx.cmake  webp.cmake
ext-lib/webp/webp/: config.h
lib/common/: queue.hpp
lib/common/logger/: compositelogger.cpp  compositelogger.hpp  emptylogger.hpp  logger.hpp  loggerfactory.cpp  loggerfactory.hpp  loggerutils.hpp
lib/common/qtwidgets/: plaintextlogger.cpp  plaintextlogger.hpp
model/: abstractmodel.cpp  abstractmodel.hpp  imagebanconfigviewmodel.cpp  imagebanconfigviewmodel.hpp  urlsmodel.cpp  urlsmodel.hpp
types/: imagebandef.hpp  uploadparams.hpp
utils/: commonutils.cpp  commonutils.hpp  curldownloader.hpp  curlutils.hpp  imageban.hpp  pngutils.hpp  string_format.hpp  webpdecoder.hpp
widgets/: fileselector.cpp  fileselector.hpp
